* 23_password_reset: Since the test case is not stable and tagged for   interim-4, I've disabled the test case (Bug #40527)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.1/ucs-school-4.1r2@75107 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,10 @@
+ucs-test-ucsschool (3.0.17-25) unstable; urgency=medium
+
+  * 23_password_reset: Since the test case is not stable and tagged for
+    interim-4, I've disabled the test case (Bug #40527)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Thu, 08 Dec 2016 09:59:30 +0100
+
 ucs-test-ucsschool (3.0.17-24) unstable; urgency=medium
 
   * essential/computerroom.py: increase timeout to 15 seconds. Lets wait
