Bug #40901: fix race conditions and null pointer exceptions
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.1/ucs-school-4.1r2@75114 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-umc-computerroom/debian/changelog
+++ b/ucs-school-umc-computerroom/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-computerroom (8.0.14-2) unstable; urgency=medium
+
+  * Bug #40901: fix race conditions and null pointer exceptions
+
+ -- Florian Best <best@univention.de>  Thu, 08 Dec 2016 13:39:55 +0100
+
 ucs-school-umc-computerroom (8.0.14-1) unstable; urgency=medium
 
   * Bug #40901: fix exam starting/finishing when multiple browsers are
