Bug #41007: enhance the API / make it future proof
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.1/ucs-school-4.1r2@75129 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-umc-installer/debian/changelog
+++ b/ucs-school-umc-installer/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-installer (4.0.7-1) unstable; urgency=medium
+
+  * Bug #41007: enhance the API / make it future proof
+
+ -- Florian Best <best@univention.de>  Thu, 08 Dec 2016 16:14:00 +0100
+
 ucs-school-umc-installer (4.0.6-1) unstable; urgency=medium
 
   * Bug #41007: Add special page for DC Backup installation
