--- a/ucs-school-umc-installer/debian/changelog
+++ b/ucs-school-umc-installer/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-installer (4.0.7-2) unstable; urgency=medium
+
+  * Bug #41007: fiy typo
+
+ -- Florian Best <best@univention.de>  Thu, 08 Dec 2016 16:26:13 +0100
+
 ucs-school-umc-installer (4.0.7-1) unstable; urgency=medium
 
   * Bug #41007: enhance the API / make it future proof
