--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (3.0.17-26) unstable; urgency=medium
+
+  * Bug #43142: Additional debug output for flaky GPO test
+
+ -- Arvid Requate <requate@univention.de>  Thu, 08 Dec 2016 21:28:21 +0100
+
 ucs-test-ucsschool (3.0.17-25) unstable; urgency=medium
 
   * 23_password_reset: Since the test case is not stable and tagged for
