Bug #41989: log a message when the home directory is moved
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.1/ucs-school-4.1r2@75146 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-old-homedirs/debian/changelog
+++ b/ucs-school-old-homedirs/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-old-homedirs (11.0.0-7) unstable; urgency=low
+
+  * Bug #41989: log a message when the home directory is moved
+
+ -- Daniel Troeder <troeder@univention.de>  Fri, 09 Dec 2016 08:43:52 +0100
+
 ucs-school-old-homedirs (11.0.0-6) unstable; urgency=low
 
   * Bug #41989: listener issues command='d' now, when a user is moved out of
