Bug #40901: execute at jobs to reset settings at second 0 Bug #40901: fix function call causing that no error handling is done
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.1/ucs-school-4.1r2@75152 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-umc-computerroom/debian/changelog
+++ b/ucs-school-umc-computerroom/debian/changelog
@@ -1,3 +1,10 @@
+ucs-school-umc-computerroom (8.0.15-1) unstable; urgency=medium
+
+  * Bug #40901: execute at jobs to reset settings at second 0
+  * Bug #40901: fix function call causing that no error handling is done
+
+ -- Florian Best <best@univention.de>  Fri, 09 Dec 2016 12:43:49 +0100
+
 ucs-school-umc-computerroom (8.0.14-2) unstable; urgency=medium
 
   * Bug #40901: fix race conditions and null pointer exceptions
