Bug #42959: fix link to SDB article
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.1/ucs-school-4.1r2@75155 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-metapackage/debian/changelog
+++ b/ucs-school-metapackage/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-metapackage (9.0.2-17) unstable; urgency=low
+
+  * Bug #42959: fix link to SDB article
+
+ -- Daniel Troeder <troeder@univention.de>  Fri, 09 Dec 2016 13:35:00 +0100
+
 ucs-school-metapackage (9.0.2-16) unstable; urgency=low
 
   * Bug #42959: fix link to SDB article
