Bug #37955: remove homedir of exam user before creating it
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.1/ucs-school-4.1r2@75167 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-umc-exam/debian/changelog
+++ b/ucs-school-umc-exam/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-exam (6.0.10-5) unstable; urgency=low
+
+  * Bug #37955: remove homedir of exam user before creating it
+
+ -- Daniel Troeder <troeder@univention.de>  Fri, 09 Dec 2016 16:06:54 +0100
+
 ucs-school-umc-exam (6.0.10-4) unstable; urgency=low
 
   * Bug #37955: remove homedir of exam user
