Revert "Bug #37955: remove homedir of exam user"
This reverts commit r75127. Changelog is kept.

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.1/ucs-school-4.1r2@75173 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-umc-exam/debian/changelog
+++ b/ucs-school-umc-exam/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-exam (6.0.10-6) unstable; urgency=low
+
+  * Bug #37955: reverted last 2 commits
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Fri, 09 Dec 2016 17:23:56 +0100
+
 ucs-school-umc-exam (6.0.10-5) unstable; urgency=low
 
   * Bug #37955: remove homedir of exam user before creating it
