Bug #37955: use unique home directories for exam users
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.1/ucs-school-4.1r2@75174 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-umc-exam/debian/changelog
+++ b/ucs-school-umc-exam/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-exam (6.0.10-7) unstable; urgency=low
+
+  * Bug #37955: use unique home directories for exam users
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Fri, 09 Dec 2016 17:36:55 +0100
+
 ucs-school-umc-exam (6.0.10-6) unstable; urgency=low
 
   * Bug #37955: reverted last 2 commits
