Bug #37955: added new test for checking exam home directories
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.1/ucs-school-4.1r2@75180 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (3.0.17-27) unstable; urgency=low
+
+  * Bug #37955: added new test for checking exam home directories
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Sun, 11 Dec 2016 22:37:59 +0100
+
 ucs-test-ucsschool (3.0.17-26) unstable; urgency=medium
 
   * Bug #43142: Additional debug output for flaky GPO test
