* essential/importusers.py: wait for S4 connector (Bug #43154)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.1/ucs-school-4.1r2@75183 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (3.0.17-28) unstable; urgency=medium
+
+  * essential/importusers.py: wait for S4 connector (Bug #43154)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Mon, 12 Dec 2016 06:38:51 +0100
+
 ucs-test-ucsschool (3.0.17-27) unstable; urgency=low
 
   * Bug #37955: added new test for checking exam home directories
