--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (3.0.17-29) unstable; urgency=medium
+
+  * essential/importusers.py: wait for S4 connector (Bug #43154)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Mon, 12 Dec 2016 06:56:40 +0100
+
 ucs-test-ucsschool (3.0.17-28) unstable; urgency=medium
 
   * essential/importusers.py: wait for S4 connector (Bug #43154)
