Bug #37955: fix TypeError
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.1/ucs-school-4.1r2@75187 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (3.0.17-30) unstable; urgency=medium
+
+  * Bug #37955: fix TypeError
+
+ -- Florian Best <best@univention.de>  Mon, 12 Dec 2016 06:59:45 +0100
+
 ucs-test-ucsschool (3.0.17-29) unstable; urgency=medium
 
   * essential/importusers.py: wait for S4 connector (Bug #43154)
