Bug #43169: disabled 72_radius_machine_authentication
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.1/ucs-school-4.1r2@75189 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (3.0.17-31) unstable; urgency=low
+
+  * Bug #43169: disabled 72_radius_machine_authentication
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Mon, 12 Dec 2016 10:23:15 +0100
+
 ucs-test-ucsschool (3.0.17-30) unstable; urgency=medium
 
   * Bug #37955: fix TypeError
