Bug #41910: adjust test case to test workgroup membership when removing user from schools
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.1/ucs-school-4.1r2@75217 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (3.0.17-32) unstable; urgency=medium
+
+  * Bug #41910: adjust test case to test workgroup membership when removing user from schools
+
+ -- Florian Best <best@univention.de>  Mon, 12 Dec 2016 15:57:59 +0100
+
 ucs-test-ucsschool (3.0.17-31) unstable; urgency=low
 
   * Bug #43169: disabled 72_radius_machine_authentication
