--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (3.0.17-33) unstable; urgency=low
+
+  * Bug #43172: fixed 101_exam_mode_home_directories
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Wed, 14 Dec 2016 13:54:18 +0100
+
 ucs-test-ucsschool (3.0.17-32) unstable; urgency=medium
 
   * Bug #41910: adjust test case to test workgroup membership when removing user from schools
