Bug #40471: Added 90_ucsschool/140_check_Domain_Users_policies
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.1/ucs-school-4.1r2@75311 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (3.0.17-34) unstable; urgency=medium
+
+  * Bug #40471: Added 90_ucsschool/140_check_Domain_Users_policies
+
+ -- Richard Ulmer <ulmer@univention.de>  Thu, 15 Dec 2016 12:22:51 +0100
+
 ucs-test-ucsschool (3.0.17-33) unstable; urgency=low
 
   * Bug #43172: fixed 101_exam_mode_home_directories
