--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (3.0.17-35) unstable; urgency=low
+
+  * Bug #41344: raise timeout for delete variants test
+
+ -- Daniel Troeder <troeder@univention.de>  Thu, 15 Dec 2016 22:01:08 +0100
+
 ucs-test-ucsschool (3.0.17-34) unstable; urgency=medium
 
   * Bug #40471: Added 90_ucsschool/140_check_Domain_Users_policies
