--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (3.0.17-36) unstable; urgency=medium
+
+  * Bug #40470: Added DNS related tests.
+
+ -- Richard Ulmer <ulmer@univention.de>  Mon, 19 Dec 2016 12:21:27 +0100
+
 ucs-test-ucsschool (3.0.17-35) unstable; urgency=low
 
   * Bug #41344: raise timeout for delete variants test
