--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (3.0.17-37) unstable; urgency=medium
+
+  * Bug #40470: Added DNS related tests. Bump...
+
+ -- Richard Ulmer <ulmer@univention.de>  Mon, 19 Dec 2016 12:28:45 +0100
+
 ucs-test-ucsschool (3.0.17-36) unstable; urgency=medium
 
   * Bug #40470: Added DNS related tests.
