--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (3.0.17-38) unstable; urgency=medium
+
+  * Bug #40471: Fixed 90_ucsschool/140_check_Domain_Users_policies
+
+ -- Richard Ulmer <ulmer@univention.de>  Wed, 21 Dec 2016 16:20:38 +0100
+
 ucs-test-ucsschool (3.0.17-37) unstable; urgency=medium
 
   * Bug #40470: Added DNS related tests. Bump...
