Bug #34221: ucs-test-ucsschool: update changelog
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.1/ucs-school-4.1r2@75526 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,13 @@
+ucs-test-ucsschool (3.0.17-39) unstable; urgency=medium
+
+  * Bug #34221: 96_samba4_sid_allocation: improve and fix the test
+    - check ldap sid post sync
+    - check s4 rIDNextRID post sync
+    - use `wait_for_drs_replication()`
+    - remove skip tag
+
+ -- Lukas Oyen <oyen@univention.de>  Thu, 22 Dec 2016 13:30:46 +0100
+
 ucs-test-ucsschool (3.0.17-38) unstable; urgency=medium
 
   * Bug #40471: Fixed 90_ucsschool/140_check_Domain_Users_policies
