--- a/italc/debian/changelog
+++ b/italc/debian/changelog
@@ -1,3 +1,9 @@
+italc (2:2.0.25-17) unstable; urgency=medium
+
+  * Bug #43244: prevent segfault in libvncserver CopyRectangle()
+
+ -- Florian Best <best@univention.de>  Mon, 02 Jan 2017 13:22:55 +0100
+
 italc (2:2.0.25-16) unstable; urgency=medium
 
   * Bug #43051: fix segfaults during screenshot creation
