--- a/italc/debian/changelog
+++ b/italc/debian/changelog
@@ -1,3 +1,9 @@
+italc (2:2.0.25-18) unstable; urgency=medium
+
+  * Bug #43092: try to prevent segfault by mutex locking
+
+ -- Florian Best <best@univention.de>  Mon, 02 Jan 2017 17:00:05 +0100
+
 italc (2:2.0.25-17) unstable; urgency=medium
 
   * Bug #43244: prevent segfault in libvncserver CopyRectangle()
