--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (3.0.17-40) unstable; urgency=medium
+
+  * Bug #40527: reenable test
+
+ -- Florian Best <best@univention.de>  Mon, 02 Jan 2017 19:14:41 +0100
+
 ucs-test-ucsschool (3.0.17-39) unstable; urgency=medium
 
   * Bug #34221: 96_samba4_sid_allocation: improve and fix the test
