Bug #40527: wait a little bit longer, maybe the new passwords aren't yet replicated
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.1/ucs-school-4.1r2@75564 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (3.0.17-41) unstable; urgency=medium
+
+  * Bug #40527: fix more cases
+
+ -- Florian Best <best@univention.de>  Tue, 03 Jan 2017 19:03:28 +0100
+
 ucs-test-ucsschool (3.0.17-40) unstable; urgency=medium
 
   * Bug #40527: reenable test
