--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (3.0.17-42) unstable; urgency=medium
+
+  * Bug #40527: fix more cases
+
+ -- Florian Best <best@univention.de>  Tue, 03 Jan 2017 19:18:15 +0100
+
 ucs-test-ucsschool (3.0.17-41) unstable; urgency=medium
 
   * Bug #40527: fix more cases
