--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (3.0.17-43) unstable; urgency=medium
+
+  * Bug #40471: Fixed 90_ucsschool/140_check_Domain_Users_policies
+
+ -- Richard Ulmer <ulmer@univention.de>  Thu, 05 Jan 2017 12:01:07 +0100
+
 ucs-test-ucsschool (3.0.17-42) unstable; urgency=medium
 
   * Bug #40527: fix more cases
