--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (3.0.17-45) unstable; urgency=medium
+
+  * Bug #40470: Fixed 00_checks/30_check_DNS_UCRVs
+
+ -- Richard Ulmer <ulmer@univention.de>  Thu, 05 Jan 2017 12:54:31 +0100
+
 ucs-test-ucsschool (3.0.17-44) unstable; urgency=medium
 
   * Bug #40470: Fixed 00_checks/30_check_DNS_UCRVs and 90_ucsschool/141_check_DNS_settings
