--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (3.0.17-46) unstable; urgency=medium
+
+  * Bug #40470: Cleaned code in 90_ucsschool/141_check_DNS_settings
+
+ -- Richard Ulmer <ulmer@univention.de>  Tue, 10 Jan 2017 14:47:28 +0100
+
 ucs-test-ucsschool (3.0.17-45) unstable; urgency=medium
 
   * Bug #40470: Fixed 00_checks/30_check_DNS_UCRVs
