--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (3.0.17-47) unstable; urgency=medium
+
+  * Bug #40470: Improved code in 90_ucsschool/141_check_DNS_settings
+
+ -- Richard Ulmer <ulmer@univention.de>  Mon, 23 Jan 2017 16:13:59 +0100
+
 ucs-test-ucsschool (3.0.17-46) unstable; urgency=medium
 
   * Bug #40470: Cleaned code in 90_ucsschool/141_check_DNS_settings
