Bug #43389: use univention.lib.umc.Client
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.1/ucs-school-4.1r2@76032 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (3.0.17-48) unstable; urgency=medium
+
+  * Bug #43389: use univention.lib.umc_connection
+
+ -- Florian Best <best@univention.de>  Mon, 23 Jan 2017 20:08:04 +0100
+
 ucs-test-ucsschool (3.0.17-47) unstable; urgency=medium
 
   * Bug #40470: Improved code in 90_ucsschool/141_check_DNS_settings
