Bug #43389: fix duplicated sed :/
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.1/ucs-school-4.1r2@76034 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (3.0.17-49) unstable; urgency=medium
+
+  * Bug #43389: fix duplicated sed :/
+
+ -- Florian Best <best@univention.de>  Tue, 24 Jan 2017 10:14:38 +0100
+
 ucs-test-ucsschool (3.0.17-48) unstable; urgency=medium
 
   * Bug #43389: use univention.lib.umc_connection
