--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,11 @@
+ucs-test-ucsschool (3.0.17-50) unstable; urgency=medium
+
+  * Bug #34214: move rename 91b_samba4_gpc_two_way_replication
+    to 91b_samba4_gpc_two_way_replication, to make space for a simpler test 91a
+  * Bug #34214: add test 91a_samba4_gpc_openldap_replication
+
+ -- Lukas Oyen <oyen@univention.de>  Tue, 24 Jan 2017 13:19:53 +0100
+
 ucs-test-ucsschool (3.0.17-49) unstable; urgency=medium
 
   * Bug #43389: fix duplicated sed :/
