--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,10 @@
+ucs-test-ucsschool (3.0.17-52) unstable; urgency=medium
+
+  * Bug #34214: use univention.admin.uldap
+  * Bug #34216: use univention.admin.uldap
+
+ -- Lukas Oyen <oyen@univention.de>  Tue, 24 Jan 2017 16:28:33 +0100
+
 ucs-test-ucsschool (3.0.17-51) unstable; urgency=medium
 
   * Bug #34216: reduce flakiness in 91_samba4_gpc_two_way_replication
