--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (3.0.17-53) unstable; urgency=medium
+
+  * Bug #43389: fix some typos
+
+ -- Florian Best <best@univention.de>  Wed, 25 Jan 2017 10:22:33 +0100
+
 ucs-test-ucsschool (3.0.17-52) unstable; urgency=medium
 
   * Bug #34214: use univention.admin.uldap
