--- a/ucs-school-umc-computerroom/debian/changelog
+++ b/ucs-school-umc-computerroom/debian/changelog
@@ -1,3 +1,10 @@
+ucs-school-umc-computerroom (8.0.15-2) unstable; urgency=low
+
+  * Bug #42356: add url flavour=screenshot to show screen view automatically
+  * Patch by Andreas Peichert <peichert@univention.de>
+
+ -- Daniel Troeder <troeder@univention.de>  Mon, 06 Feb 2017 12:11:06 +0100
+
 ucs-school-umc-computerroom (8.0.15-1) unstable; urgency=medium
 
   * Bug #40901: execute at jobs to reset settings at second 0
