--- a/ucs-school-webproxy/debian/changelog
+++ b/ucs-school-webproxy/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-webproxy (12.0.4-3) unstable; urgency=low
+
+  * Bug #31728: create symlink wpad.dat -> proxy.pac
+
+ -- Daniel Troeder <troeder@univention.de>  Mon, 06 Feb 2017 15:08:12 +0100
+
 ucs-school-webproxy (12.0.4-2) unstable; urgency=medium
 
   * Bug #41749: make unbind implicit
