Bug #37256: YAML, copyright, spelling
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.1/ucs-school-4.1r2@76567 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-netlogon-user-logonscripts/debian/changelog
+++ b/ucs-school-netlogon-user-logonscripts/debian/changelog
@@ -361,7 +361,7 @@ ucs-school-netlogon-user-logonscripts (4.0.0-1) unstable; urgency=low
 
 ucs-school-netlogon-user-logonscripts (4.0.0-0) unstable; urgency=low
 
-  * ported package to component ucs@school
+  * ported package to component UCS@school
 
  -- Sönke Schwardt <schwardt@univention.de>  Tue, 02 Jul 2009 13:29:23 +0200
 
