Bug #41910: fix setting school and schools in same update() call, always check users school(s) attribute(s)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.1/ucs-school-4.1r2@76612 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,10 @@
+ucs-test-ucsschool (3.0.17-54) unstable; urgency=low
+
+  * Bug #41910: fix setting school and schools in same update() call
+  * always check users school(s) attribute(s)
+
+ -- Daniel Troeder <troeder@univention.de>  Sun, 12 Feb 2017 19:40:15 +0100
+
 ucs-test-ucsschool (3.0.17-53) unstable; urgency=medium
 
   * Bug #43389: fix some typos
