--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (3.0.17-55) unstable; urgency=low
+
+  * Bug #41910: support legacy import script (not setting schools attribute)
+
+ -- Daniel Troeder <troeder@univention.de>  Mon, 13 Feb 2017 09:19:06 +0100
+
 ucs-test-ucsschool (3.0.17-54) unstable; urgency=low
 
   * Bug #41910: fix setting school and schools in same update() call
