--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (3.0.17-56) unstable; urgency=low
+
+  * Bug #41910: adapt derived classes to API change
+
+ -- Daniel Troeder <troeder@univention.de>  Tue, 14 Feb 2017 09:43:44 +0100
+
 ucs-test-ucsschool (3.0.17-55) unstable; urgency=low
 
   * Bug #41910: support legacy import script (not setting schools attribute)
