Bug #41910: make 'legacy' an attribute, add colored log output
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.1/ucs-school-4.1r2@76644 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,10 @@
+ucs-test-ucsschool (3.0.17-57) unstable; urgency=low
+
+  * Bug #41910: make 'legacy' an attribute
+  * add colored log output
+
+ -- Daniel Troeder <troeder@univention.de>  Tue, 14 Feb 2017 11:04:25 +0100
+
 ucs-test-ucsschool (3.0.17-56) unstable; urgency=low
 
   * Bug #41910: adapt derived classes to API change
