--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (3.0.17-58) unstable; urgency=low
+
+  * Bug #34206: reenabled test 17_http_proxy_auth_after_passwd_reset_check
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Tue, 14 Feb 2017 13:37:42 +0100
+
 ucs-test-ucsschool (3.0.17-57) unstable; urgency=low
 
   * Bug #41910: make 'legacy' an attribute
