Bug #42356: coding style + missing semicolon
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.1/ucs-school-4.1r2@76658 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-umc-computerroom/debian/changelog
+++ b/ucs-school-umc-computerroom/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-computerroom (8.0.15-3) unstable; urgency=medium
+
+  * Bug #42356: coding style + missing semicolon
+
+ -- Florian Best <best@univention.de>  Tue, 14 Feb 2017 15:52:44 +0100
+
 ucs-school-umc-computerroom (8.0.15-2) unstable; urgency=low
 
   * Bug #42356: add url flavour=screenshot to show screen view automatically
