Bug #41910: support automatic removal of secondary schools from User objects, including removal of groups from removed school
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.1/ucs-school-4.1r2@76682 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-lib/debian/changelog
+++ b/ucs-school-lib/debian/changelog
@@ -1,3 +1,10 @@
+ucs-school-lib (9.0.31-1) unstable; urgency=low
+
+  * support automatic removal of secondary schools from User objects,
+    including removal of groups from removed school (Bug #41910)
+
+ -- Daniel Troeder <troeder@univention.de>  Wed, 15 Feb 2017 09:33:21 +0100
+
 ucs-school-lib (9.0.30-1) unstable; urgency=medium
 
   * Bug #42399: adjust text
