Bug #43170: fix removal of users from secondary OUs, Bug #41910: adapt to change in User.remove_from_school()
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.1/ucs-school-4.1r2@76772 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-umc-wizards/debian/changelog
+++ b/ucs-school-umc-wizards/debian/changelog
@@ -1,3 +1,10 @@
+ucs-school-umc-wizards (8.0.0-15) unstable; urgency=low
+
+  * Bug #43170: fix removal of users from secondary OUs
+  * Bug #41910: adapt to change in User.remove_from_school()
+
+ -- Daniel Troeder <troeder@univention.de>  Thu, 16 Feb 2017 16:01:20 +0100
+
 ucs-school-umc-wizards (8.0.0-14) unstable; urgency=medium
 
   * Bug #41229: adjust translation
