--- a/ucs-school-umc-installer/debian/changelog
+++ b/ucs-school-umc-installer/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-installer (5.0.0-1) unstable; urgency=medium
+
+  * Bug #43389: use univention.lib.umc.Client
+
+ -- Florian Best <best@univention.de>  Fri, 17 Feb 2017 10:25:54 +0100
+
 ucs-school-umc-installer (4.0.7-2) unstable; urgency=medium
 
   * Bug #41007: fiy typo
