Bug #43389: use univention.lib.umc.Client
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.2/ucs-school-4.2@76784 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-umc-exam/debian/changelog
+++ b/ucs-school-umc-exam/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-exam (7.0.0-1) unstable; urgency=medium
+
+  * Bug #43389: use univention.lib.umc.Client
+
+ -- Florian Best <best@univention.de>  Fri, 17 Feb 2017 10:26:42 +0100
+
 ucs-school-umc-exam (6.0.10-7) unstable; urgency=low
 
   * Bug #37955: use unique home directories for exam users
