Bug #43570: version bump for UCS@school 4.2
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.2/ucs-school-4.2@76790 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/italc/debian/changelog
+++ b/italc/debian/changelog
@@ -1,3 +1,9 @@
+italc (3:2.0.2-1) unstable; urgency=low
+
+  * Bug #43570: version bump for UCS@school 4.2
+
+ -- Daniel Troeder <troeder@univention.de>  Fri, 17 Feb 2017 12:27:06 +0100
+
 italc (2:2.0.25-18) unstable; urgency=medium
 
   * Bug #43092: try to prevent segfault by mutex locking
