--- a/italc-windows/debian/changelog
+++ b/italc-windows/debian/changelog
@@ -1,3 +1,9 @@
+italc-windows (4.0.0-1) unstable; urgency=low
+
+  * Bug #43570: version bump for UCS@school 4.2
+
+ -- Daniel Troeder <troeder@univention.de>  Fri, 17 Feb 2017 12:29:05 +0100
+
 italc-windows (3.0.3-3) unstable; urgency=medium
 
   * Bug #38415: rebase
