--- a/ucs-school-branding/debian/changelog
+++ b/ucs-school-branding/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-branding (6.0.0-1) unstable; urgency=low
+
+  * version bump for UCS@school 4.2
+
+ -- Daniel Troeder <troeder@univention.de>  Fri, 17 Feb 2017 12:11:51 +0100
+
 ucs-school-branding (5.0.0-1) unstable; urgency=medium
 
   * Bug #39534: Start UCS@school 4.1 development
