--- a/ucs-school-info/debian/changelog
+++ b/ucs-school-info/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-info (7.0.0-1) unstable; urgency=low
+
+  * Bug #43570: version bump for UCS@school 4.2
+
+ -- Daniel Troeder <troeder@univention.de>  Fri, 17 Feb 2017 12:13:24 +0100
+
 ucs-school-info (6.0.0-1) unstable; urgency=medium
 
   * Bug #39534: Start UCS@school 4.1 development
