--- a/ucs-school-italc/debian/changelog
+++ b/ucs-school-italc/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-italc (11.0.0-1) unstable; urgency=low
+
+  * Bug #43570: version bump for UCS@school 4.2
+
+ -- Daniel Troeder <troeder@univention.de>  Fri, 17 Feb 2017 12:14:03 +0100
+
 ucs-school-italc (10.0.0-3) unstable; urgency=medium
 
   * Bug #38213: implement API Change in displayTextMessage()
