--- a/ucs-school-old-homedirs/debian/changelog
+++ b/ucs-school-old-homedirs/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-old-homedirs (12.0.0-1) unstable; urgency=low
+
+  * Bug #43570: version bump for UCS@school 4.2
+
+ -- Daniel Troeder <troeder@univention.de>  Fri, 17 Feb 2017 12:15:29 +0100
+
 ucs-school-old-homedirs (11.0.0-7) unstable; urgency=low
 
   * Bug #41989: log a message when the home directory is moved
