--- a/ucs-school-old-sharedirs/debian/changelog
+++ b/ucs-school-old-sharedirs/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-old-sharedirs (12.0.0-1) unstable; urgency=low
+
+  * Bug #43570: version bump for UCS@school 4.2
+
+ -- Daniel Troeder <troeder@univention.de>  Fri, 17 Feb 2017 12:15:37 +0100
+
 ucs-school-old-sharedirs (11.0.0-1) unstable; urgency=medium
 
   * Bug #39534: Start UCS@school 4.1 development
