--- a/ucs-school-roleshares/debian/changelog
+++ b/ucs-school-roleshares/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-roleshares (5.0.0-1) unstable; urgency=low
+
+  * Bug #43570: version bump for UCS@school 4.2
+
+ -- Daniel Troeder <troeder@univention.de>  Fri, 17 Feb 2017 12:15:58 +0100
+
 ucs-school-roleshares (4.0.0-1) unstable; urgency=medium
 
   * Bug #41117: remove unnecessary use of search_base
