--- a/ucs-school-s4-branch-site/debian/changelog
+++ b/ucs-school-s4-branch-site/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-s4-branch-site (5.0.0-1) unstable; urgency=low
+
+  * Bug #43570: version bump for UCS@school 4.2
+
+ -- Daniel Troeder <troeder@univention.de>  Fri, 17 Feb 2017 12:16:07 +0100
+
 ucs-school-s4-branch-site (4.0.0-1) unstable; urgency=medium
 
   * Bug #41117: remove unnecessary use of search_base
