--- a/ucs-school-ucc-integration/debian/changelog
+++ b/ucs-school-ucc-integration/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-ucc-integration (4.0.0-1) unstable; urgency=low
+
+  * Bug #43570: version bump for UCS@school 4.2
+
+ -- Daniel Troeder <troeder@univention.de>  Fri, 17 Feb 2017 12:16:18 +0100
+
 ucs-school-ucc-integration (3.0.0-6) unstable; urgency=low
 
   * Bug #40705: try to set ucc/timeserver also when updating
