--- a/ucs-school-umc-helpdesk/debian/changelog
+++ b/ucs-school-umc-helpdesk/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-helpdesk (13.0.0-1) unstable; urgency=low
+
+  * Bug #43570: version bump for UCS@school 4.2
+
+ -- Daniel Troeder <troeder@univention.de>  Fri, 17 Feb 2017 12:17:33 +0100
+
 ucs-school-umc-helpdesk (12.0.3-1) unstable; urgency=medium
 
   * Bug #42399: use SchoolSanitizer
