--- a/ucs-school-umc-internetrules/debian/changelog
+++ b/ucs-school-umc-internetrules/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-internetrules (13.0.0-1) unstable; urgency=low
+
+  * Bug #43570: version bump for UCS@school 4.2
+
+ -- Daniel Troeder <troeder@univention.de>  Fri, 17 Feb 2017 12:17:51 +0100
+
 ucs-school-umc-internetrules (12.0.0-2) unstable; urgency=low
 
   * Bug #42217: Corrected a typo.
