--- a/ucs-school-umc-printermoderation/debian/changelog
+++ b/ucs-school-umc-printermoderation/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-printermoderation (14.0.0-1) unstable; urgency=low
+
+  * Bug #43570: version bump for UCS@school 4.2
+
+ -- Daniel Troeder <troeder@univention.de>  Fri, 17 Feb 2017 12:18:23 +0100
+
 ucs-school-umc-printermoderation (13.0.4-1) unstable; urgency=medium
 
   * Bug #42399: use SchoolSanitizer
