--- a/ucs-school-umc-printermoderation/debian/changelog
+++ b/ucs-school-umc-printermoderation/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-printermoderation (14.0.1-1) unstable; urgency=medium
+
+  * Bug #42408: prevent certain security checks for printjob download
+
+ -- Florian Best <best@univention.de>  Fri, 17 Feb 2017 15:57:46 +0100
+
 ucs-school-umc-printermoderation (14.0.0-1) unstable; urgency=low
 
   * Bug #43570: version bump for UCS@school 4.2
