Bug #39378: psutil API change
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.2/ucs-school-4.2@76807 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-umc-computerroom/debian/changelog
+++ b/ucs-school-umc-computerroom/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-computerroom (9.0.2-1) unstable; urgency=medium
+
+  * Bug #39378: psutil API change
+
+ -- Florian Best <best@univention.de>  Fri, 17 Feb 2017 17:44:03 +0100
+
 ucs-school-umc-computerroom (9.0.1-1) unstable; urgency=medium
 
   * Bug #42408: prevent certain security checks for screenshot receival
