--- a/ucs-school-lib/debian/changelog
+++ b/ucs-school-lib/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-lib (10.0.1-1) unstable; urgency=medium
+
+  * Bug #39379: psutil API change
+
+ -- Florian Best <best@univention.de>  Fri, 17 Feb 2017 17:49:20 +0100
+
 ucs-school-lib (10.0.0-1) unstable; urgency=low
 
   * Bug #43570: version bump for UCS@school 4.2
