--- a/ucs-school-umc-computerroom/debian/changelog
+++ b/ucs-school-umc-computerroom/debian/changelog
@@ -1,3 +1,10 @@
+ucs-school-umc-computerroom (9.0.4-1) unstable; urgency=medium
+
+  * Bug #43578: Adjust paths from /univention-management-console/ to
+    /univention/management/
+
+ -- Florian Best <best@univention.de>  Sat, 18 Feb 2017 04:31:42 +0100
+
 ucs-school-umc-computerroom (9.0.3-1) unstable; urgency=medium
 
   * Bug #43575: make grid visible again
