--- a/ucs-school-netlogon-user-logonscripts/debian/changelog
+++ b/ucs-school-netlogon-user-logonscripts/debian/changelog
@@ -1,3 +1,10 @@
+ucs-school-netlogon-user-logonscripts (13.0.1-1) unstable; urgency=medium
+
+  * Bug #43578: Adjust paths from /univention-management-console/ to
+    /univention/management/
+
+ -- Florian Best <best@univention.de>  Sat, 18 Feb 2017 04:33:22 +0100
+
 ucs-school-netlogon-user-logonscripts (13.0.0-1) unstable; urgency=low
 
   * Bug #43570: version bump for UCS@school 4.2
