--- a/ucs-school-umc-printermoderation/debian/changelog
+++ b/ucs-school-umc-printermoderation/debian/changelog
@@ -1,3 +1,10 @@
+ucs-school-umc-printermoderation (14.0.2-1) unstable; urgency=medium
+
+  * Bug #43578: Adjust paths from /univention-management-console/ to
+    /univention/management/
+
+ -- Florian Best <best@univention.de>  Sat, 18 Feb 2017 04:31:35 +0100
+
 ucs-school-umc-printermoderation (14.0.1-1) unstable; urgency=medium
 
   * Bug #42408: prevent certain security checks for printjob download
