--- a/ucs-school-umc-helpdesk/debian/changelog
+++ b/ucs-school-umc-helpdesk/debian/changelog
@@ -1,3 +1,10 @@
+ucs-school-umc-helpdesk (13.0.0-2) unstable; urgency=medium
+
+  * Bug #36789: adjust header buttons to new UMC design; applied patch
+    from Richard
+
+ -- Florian Best <best@univention.de>  Sat, 18 Feb 2017 05:06:46 +0100
+
 ucs-school-umc-helpdesk (13.0.0-1) unstable; urgency=low
 
   * Bug #43570: version bump for UCS@school 4.2
