--- a/ucs-school-umc-lessontimes/debian/changelog
+++ b/ucs-school-umc-lessontimes/debian/changelog
@@ -1,3 +1,10 @@
+ucs-school-umc-lessontimes (5.0.0-2) unstable; urgency=medium
+
+  * Bug #36789: adjust header buttons to new UMC design; applied patch
+    from Richard
+
+ -- Florian Best <best@univention.de>  Sat, 18 Feb 2017 05:12:31 +0100
+
 ucs-school-umc-lessontimes (5.0.0-1) unstable; urgency=medium
 
   * Bug #42408: fix Cross Site Scripting (XSS) vulnerabilities
