--- a/ucs-school-umc-installer/debian/changelog
+++ b/ucs-school-umc-installer/debian/changelog
@@ -1,3 +1,10 @@
+ucs-school-umc-installer (5.0.0-2) unstable; urgency=medium
+
+  * Bug #36789: adjust header buttons to new UMC design; applied patch
+    from Richard
+
+ -- Florian Best <best@univention.de>  Sat, 18 Feb 2017 05:11:25 +0100
+
 ucs-school-umc-installer (5.0.0-1) unstable; urgency=medium
 
   * Bug #43389: use univention.lib.umc.Client
