Bug #43577: Add old Grid from UCS 4.1 as fallback
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.2/ucs-school-4.2@76848 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-umc-csv-import/debian/changelog
+++ b/ucs-school-umc-csv-import/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-csv-import (4.0.2-1) unstable; urgency=medium
+
+  * Bug #43577: Add old Grid from UCS 4.1 as fallback
+
+ -- Florian Best <best@univention.de>  Mon, 20 Feb 2017 10:22:46 +0100
+
 ucs-school-umc-csv-import (4.0.1-1) unstable; urgency=medium
 
   * Bug #36789: adjust header buttons to new UMC design; applied patch
