Bug #42408: decorator was renamed
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.2/ucs-school-4.2@76852 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-umc-computerroom/debian/changelog
+++ b/ucs-school-umc-computerroom/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-computerroom (9.0.6-1) unstable; urgency=medium
+
+  * Bug #42408: decorator was renamed
+
+ -- Florian Best <best@univention.de>  Mon, 20 Feb 2017 11:08:40 +0100
+
 ucs-school-umc-computerroom (9.0.5-1) unstable; urgency=medium
 
   * Bug #36789: adjust header buttons to new UMC design; applied patch from
