--- a/ucs-school-umc-helpdesk/debian/changelog
+++ b/ucs-school-umc-helpdesk/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-helpdesk (12.0.3-2) unstable; urgency=low
+
+  * Bug #38389: let join script fail completely if any of its commands fails
+
+ -- Daniel Troeder <troeder@univention.de>  Mon, 20 Feb 2017 13:58:12 +0100
+
 ucs-school-umc-helpdesk (12.0.3-1) unstable; urgency=medium
 
   * Bug #42399: use SchoolSanitizer
