--- a/ucs-school-umc-helpdesk/debian/changelog
+++ b/ucs-school-umc-helpdesk/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-helpdesk (12.0.3-3) unstable; urgency=low
+
+  * Bug #38389: change order in postinst
+
+ -- Daniel Troeder <troeder@univention.de>  Tue, 21 Feb 2017 10:21:47 +0100
+
 ucs-school-umc-helpdesk (12.0.3-2) unstable; urgency=low
 
   * Bug #38389: let join script fail completely if any of its commands fails
