Bug #43575: hide checkboxes in reboot grid
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.2/ucs-school-4.2@76912 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-umc-exam/debian/changelog
+++ b/ucs-school-umc-exam/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-exam (7.0.2-1) unstable; urgency=medium
+
+  * Bug #43575: hide checkboxes in reboot grid
+
+ -- Florian Best <best@univention.de>  Tue, 21 Feb 2017 15:54:21 +0100
+
 ucs-school-umc-exam (7.0.1-1) unstable; urgency=medium
 
   * Bug #36789: adjust header buttons to new UMC design; applied patch
