--- a/ucs-school-umc-helpdesk/debian/changelog
+++ b/ucs-school-umc-helpdesk/debian/changelog
@@ -1,3 +1,11 @@
+ucs-school-umc-helpdesk (13.0.0-3) unstable; urgency=low
+
+  * Bug #43611 (merged from #38389): change order in postinst
+  * Bug #43611 (merged from #38389): let join script fail completely if any
+    of its commands fails
+
+ -- Daniel Troeder <troeder@univention.de>  Tue, 21 Feb 2017 10:21:47 +0100
+
 ucs-school-umc-helpdesk (13.0.0-2) unstable; urgency=medium
 
   * Bug #36789: adjust header buttons to new UMC design; applied patch
