--- a/ucs-school-netlogon-user-logonscripts/debian/changelog
+++ b/ucs-school-netlogon-user-logonscripts/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-netlogon-user-logonscripts (12.0.4-6) unstable; urgency=low
+
+  * Bug #37256: not safe to use univentionObjectType, use objectClass instead
+
+ -- Daniel Troeder <troeder@univention.de>  Fri, 24 Feb 2017 14:47:15 +0100
+
 ucs-school-netlogon-user-logonscripts (12.0.4-5) unstable; urgency=medium
 
   * Bug #43504: strip whitespace from commonshare prefix
