--- a/ucs-school-netlogon-user-logonscripts/debian/changelog
+++ b/ucs-school-netlogon-user-logonscripts/debian/changelog
@@ -1,3 +1,16 @@
+ucs-school-netlogon-user-logonscripts (12.0.4-9) unstable; urgency=low
+
+  * Bug #43526: set the path in which to create the directory for the links
+    with UCRV ucsschool/userlogon/shares_folder_parent_path
+
+ -- Daniel Troeder <troeder@univention.de>  Tue, 28 Feb 2017 09:55:47 +0100
+
+ucs-school-netlogon-user-logonscripts (12.0.4-8) unstable; urgency=low
+
+  * Bug #41375: set icons of share/link folders
+
+ -- Daniel Troeder <troeder@univention.de>  Wed, 27 Feb 2017 16:25:00 +0100
+
 ucs-school-netlogon-user-logonscripts (12.0.4-7) unstable; urgency=low
 
   * Bug #43526: refactor functions to class methods, remove global variables
